samples/_failures_safe/1761460069_3797bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2b34cfa.c: In function ‘main’:
./samples/SAFE/__tmp_b2b34cfa.c:186:12: error: missing terminating " character
  186 |     printf("Tokens found: %
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2b34cfa.c:186:5: error: expected expression at end of input
  186 |     printf("Tokens found: %
      |     ^~~~~~
./samples/SAFE/__tmp_b2b34cfa.c:186:5: error: expected declaration or statement at end of input
